// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should log console error when called with invalid props 1`] = `
Array [
  Array [
    "Warning: Failed prop type: The prop \`to\` is marked as required in \`Link\`, but its value is \`undefined\`.
    in Link (at Link.js:11)",
  ],
]
`;

exports[`<Link /> should log console error when called with invalid props 2`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`to\` of type \`number\` supplied to \`Link\`, expected \`string\`.
    in Link (at Link.js:11)",
  ],
  Array [
    "Warning: Invalid route props supplied to \`Link\` component: Expected route name to be a non-empty string (got 'number')",
  ],
]
`;

exports[`<Link /> should log console error when called with invalid props 3`] = `
Array [
  Array [
    "Warning: Invalid route props supplied to \`Link\` component: Unrecognized route name 'invalid-route'",
  ],
]
`;

exports[`<Link /> should render correctly 1`] = `
<a
  href="/site/"
/>
`;

exports[`<Link /> should render correctly with route params 1`] = `
<a
  href="/site/blog/post/hello-world"
/>
`;

exports[`<Link /> should render correctly with route params and scope 1`] = `
<a
  href="/site/blog/tag/news/page/5"
/>
`;
